# films

./: .env.example  .gitignore  Dockerfile  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
api/endpoints/: auth.py  users.py
core/: config.py  security.py  validation.py
db/: abstract.py  actors.py  base.py  comments.py  movies.py  users.py
films/: settings.py  urls.py
models/: actors.py  comments.py  genres.py  movies.py  users.py
movies/: admin.py  models.py  serializers.py  service.py  urls.py  views.py
movies/migrations/: 0001_initial.py  0002_alter_movie_image.py  0002_genre_alter_movie_options_remove_movie_genre_and_more.py  0003_country_remove_movie_country_movie_countries.py  0004_artist_composer_director_producer_script_and_more.py  0005_rolesdubbed_starring_rename_artist_painter_and_more.py
repositories/: users.py
users/: models.py  serializer.py  urls.py  views.py
users/migrations/: 0001_initial.py
