[tool.poetry]
name = "films"
version = "0.1.0"
description = ""
authors = ["FrozZzy1 <frozzzy71@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
databases = "^0.8.0"
uvicorn = "^0.23.2"
asyncpg = "^0.28.0"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
